# kp-abe_1

./: .gitignore  .gitmodules  Encryption  Encryption.cpp  Encryption.h  Gk.h  Node.h  README.md  Tree.h  aesrand.h  client  client.cpp  clt13.h  main  mytest  mytest.cpp  pp.h  server  server.cpp  util_clt.cpp  util_clt.h  util_shm.cpp  util_shm.h  zsd_clt_build.sh
test/: Makefile  Makefile.am  configure  configure.in  test_gmp.cpp
test/test_shm/: makefile  shm_read  shm_read.cpp  shm_write  shm_write.cpp  shmdata.h
