#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_INIT([test_gmp.cpp])

AM_INIT_AUTOMAKE(test_gmp, 1.0)


# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
